browser.chromium/deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chromium
spec:
  replicas: 0
  selector:
    matchLabels:
      app: chromium
  template:
    metadata:
      labels:
        app: chromium
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: chromium
          image: linuxserver/chromium:version-baf94ebf
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: false
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: chromium-config-pvc
